# Scalable-NUMA-Aware-Shared-Memory-Data-Structures

./: .gitignore  README.md
data/: graph.ipynb  graph.py  tmp.md
doc/: Project Proposal.md  cs550 project.pptx  evaluation_plan.md  project_proposal.md  report.md  weekly_status.md
reference/: CS550 Term Project Proposal Sample.docx  Makefile  SCS CS550 S'23 Student Projects.docx  example.cpp  example2.cpp
reference/mlc/: mlc_v3.10.tgz
reference/mlc/Linux/: redist.txt
src/bo_huang/boost_test/: Makefile  README.md  bind_cpu.cpp  copy_numa_node.cpp  test_boost.cpp  test_memcpy  test_memcpy.cpp  test_numa_memcpy  test_numa_memcpy.cpp  test_shared_mem.cpp
src/bo_huang/lib/: lock_free_queue.cpp  lock_free_queue.h  numa_experience.h  singly_linked_list_with_locking.cpp  singly_linked_list_with_locking.h
src/bo_huang/lock_free_queue/: Makefile  multi_thread_lfq.cpp  test.cpp  test_boost_lock_free_queue  test_boost_lock_free_queue.cpp  test_lock_free_queue.cpp  test_numa_lock_free_queue.cpp
src/bo_huang/singly_linked_list/: Makefile  README.md  boost_singly_LL.cpp  local_results.csv  numa_singly_LL.cpp  singly_linked_list.h  sll_boost.cpp  sll_cross.cpp  sll_cross_rd.cpp  sll_cross_wr_erase.cpp  sll_local  sll_local.cpp  sll_local_vs_shared.cpp  sll_shm.cpp  test_boost_singly_linked_list.cpp  test_numa_singly_linked_list.cpp
src/bo_huang/singly_linked_list_with_locking/: Makefile  singly_linked_list.cpp  test.cpp  test_boost.cpp  test_my_numa_sllwl.cpp  (+7 more)
src/qiming_lyu/numa_unordered_map_test/: CMakeLists.txt  main.cpp  numa_unordered_map.cpp  numa_unordered_map.h
(+23 files in other folders)
